--- a/CMSDatabase.csproj
+++ b/CMSDatabase.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>cms.database</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="6.10.7" />
+    <PackageReference Include="NLog" Version="4.7.7" />
+    <PackageReference Include="Polly" Version="7.2.1" />
+  </ItemGroup>
 
 </Project>
